--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ src: url(fonts/FrancoisOne-Regular.ttf);
 .container{
     
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background-color: rgb(34, 36, 36);
     padding: 10px;
      
