--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ src: url(fonts/FrancoisOne-Regular.ttf);
     
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: flex-start;
     background-color: rgb(34, 36, 36);
     padding: 10px;
      
@@ -30,6 +32,9 @@ src: url(fonts/FrancoisOne-Regular.ttf);
 .card{
     width: 100%;
     max-width: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content:  baseline;
     margin-left: 10%;
     margin-top: 10%;
 }
@@ -81,7 +86,7 @@ button:hover{
     background-color: rgb(15, 15, 15);
 }
 
- input::-webkit-calendar-picker-indicator{
+ /* input::-webkit-calendar-picker-indicator{
     top: 0;
     left: 0;
     right: 0;
@@ -94,7 +99,7 @@ button:hover{
     background-size: 30px;
     cursor: pointer;
 
-}
+} */
 .result{
    
     width: 650px;
