--- a/style.css
+++ b/style.css
@@ -17,6 +17,11 @@ src: url(fonts/FrancoisOne-Regular.ttf);
     box-sizing: border-box;
 
 }
+body{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(34, 36, 36);
+}
 
 .container{
     
@@ -86,7 +91,7 @@ button:hover{
     background-color: rgb(15, 15, 15);
 }
 
- /* input::-webkit-calendar-picker-indicator{
+ input::-webkit-calendar-picker-indicator{
     top: 0;
     left: 0;
     right: 0;
@@ -99,7 +104,7 @@ button:hover{
     background-size: 30px;
     cursor: pointer;
 
-} */
+}
 .result{
    
     width: 650px;
